Move project to Next.js #117
The current Create React App project was forcing several limitations.
1. Webpack and Babel config could not be changed unless you eject
2. No support for typescript decorators
3. Client Side rendering only ( Slower load times)

Next.js has been on our tech radar to counter these limitations for a while.
The CRA limitations put us in a corner from an architecture
and testing point of view. Therefore, moving to Next.js should
significantly improve testing capabilities,move to clean architecture
and dependency inversion principle, speed up the WebUI.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,11 @@
       "dom.iterable",
       "esnext"
     ],
+    "types": [
+      "node",
+      "jest",
+      "reflect-metadata"
+    ],
     "allowJs": true,
     "skipLibCheck": true,
     "esModuleInterop": true,
@@ -18,12 +23,17 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react-jsx",
+    "jsx": "preserve",
     "experimentalDecorators": true,
-    "emitDecoratorMetadata": true
+    "emitDecoratorMetadata": true,
+    "strictPropertyInitialization": false,
+    "incremental": true
   },
   "include": [
     "src",
     "rucio.d.ts"
+  ],
+  "exclude": [
+    "node_modules"
   ]
 }
