--- a/package.json
+++ b/package.json
@@ -10,10 +10,6 @@
     "license": "Apache v2.0",
     "dependencies": {
         "@primer/css": "^20.2.4",
-        "@testing-library/jest-dom": "^5.16.4",
-        "@testing-library/react": "^13.3.0",
-        "@testing-library/user-event": "^13.5.0",
-        "@types/jest": "^27.5.2",
         "@types/node": "^16.11.38",
         "@types/react": "^18.0.11",
         "@types/react-dom": "^18.0.5",
@@ -22,25 +18,28 @@
         "bulma-quickview": "^2.0.0",
         "bulma-steps": "^2.2.1",
         "bulma-switch": "^2.0.4",
+        "inversify": "^6.0.1",
+        "inversify-react": "^1.0.2",
+        "next": "^13.1.6",
         "oidc-client-ts": "^2.0.5",
         "react": "^18.1.0",
         "react-dom": "^18.1.0",
         "react-error-boundary": "^3.1.4",
         "react-oauth2-code-pkce": "^1.7.1",
         "react-oidc-context": "^2.1.1",
-        "react-router-dom": "^6.3.0",
-        "react-scripts": "^5.0.1",
+        "reflect-metadata": "^0.1.13",
         "ts-custom-error": "^3.2.2",
         "typescript": "^4.7.3",
         "web-vitals": "^2.1.4"
     },
     "scripts": {
-        "start": "react-scripts start",
-        "build": "CI=false react-scripts build",
-        "test": "react-scripts test --env=jsdom",
+        "dev": "next dev",
+        "start": "next start",
+        "build": "CI=false next build",
+        "test": "jest --watch",
         "test:coverage": "CI=true npm test -- --coverage",
         "test:multi-vo": "REACT_APP_multi_vo_enabled=true npm test",
-        "lint": "eslint src --color",
+        "lint": "next lint",
         "lint-staged": "lint-staged --config tools/lint-staged.js",
         "prettier": "prettier -c src",
         "husky-install": "husky install",
@@ -89,15 +88,24 @@
         "@storybook/preset-create-react-app": "^4.1.2",
         "@storybook/react": "^6.5.6",
         "@storybook/testing-library": "^0.0.11",
+        "@testing-library/jest-dom": "^5.16.5",
+        "@testing-library/react": "^13.4.0",
+        "@testing-library/user-event": "^14.4.3",
+        "@types/jest": "^29.4.0",
         "@typescript-eslint/eslint-plugin": "^5.14.0",
         "@typescript-eslint/parser": "^5.14.0",
         "babel-plugin-named-exports-order": "^0.0.2",
         "eslint": "^8.10.0",
+        "eslint-config-next": "^13.1.6",
         "husky": "^7.0.4",
+        "jest": "^29.4.1",
+        "jest-environment-jsdom": "^29.4.1",
+        "jest-fetch-mock": "^3.0.3",
         "lint-staged": "^12.3.5",
         "prettier": "^2.5.1",
         "prop-types": "^15.8.1",
         "sass": "^1.53.0",
+        "ts-node": "^10.9.1",
         "webpack": "^5.73.0"
     }
 }
